--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -41,17 +41,17 @@
 						</dict>
 						<dict>
 							<key>fullPath</key>
-							<string>PDF For Participants SOS Symposium 2018 schedule.pdf</string>
+							<string>PFD for participants HWB Agenda.pdf</string>
 							<key>identifier</key>
-							<string>7A6F9ECD-FC22-4884-B91E-57B9A76DB313</string>
+							<string>5F8068D5-0482-4102-A77A-1856EF09FAEE</string>
 							<key>isInternal</key>
 							<true/>
 						</dict>
 						<dict>
 							<key>fullPath</key>
-							<string>PFD for participants HWB Agenda.pdf</string>
+							<string>PDF For Participants SOS Symposium 2018 schedule.pdf</string>
 							<key>identifier</key>
-							<string>5F8068D5-0482-4102-A77A-1856EF09FAEE</string>
+							<string>7A6F9ECD-FC22-4884-B91E-57B9A76DB313</string>
 							<key>isInternal</key>
 							<true/>
 						</dict>
@@ -2840,7 +2840,7 @@
 					<key>page34 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-08-15T22:08:04Z</date>
+						<date>2018-08-27T18:51:05Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -3229,11 +3229,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								vgie9crVMiyC
-								ZcjzCAZxtw==
+								LxslhEgNt+eo
+								9JgwGNiF0A==
 								</data>
 								<key>Size</key>
-								<integer>127333</integer>
+								<integer>127357</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -3246,7 +3246,7 @@
 					<key>page35 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-08-15T22:08:04Z</date>
+						<date>2018-08-27T18:51:05Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -3615,11 +3615,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								O0SG5WzWdE+z
-								YgxvGTgWyw==
+								f4/LQKFI+f0n
+								Oc7DvFsP3Q==
 								</data>
 								<key>Size</key>
-								<integer>125815</integer>
+								<integer>125838</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -3632,7 +3632,7 @@
 					<key>page36 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-08-14T14:29:38Z</date>
+						<date>2018-08-27T18:51:05Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -3951,11 +3951,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								3POD14I+LxZZ
-								5K2gLAVFkA==
+								q9qZhAA77N8+
+								SN4ziitHXQ==
 								</data>
 								<key>Size</key>
-								<integer>64224</integer>
+								<integer>64252</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -4660,7 +4660,7 @@
 					<key>page46 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-08-27T15:55:30Z</date>
+						<date>2018-08-27T18:51:05Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -5139,11 +5139,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								bNNqEaEIciyG
-								cid8c1zzGA==
+								34o0IiL73WVH
+								Wx0OKxQRPg==
 								</data>
 								<key>Size</key>
-								<integer>160928</integer>
+								<integer>160938</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -5412,7 +5412,7 @@
 					<key>page48 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-08-27T15:55:30Z</date>
+						<date>2018-08-27T18:51:05Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -5891,11 +5891,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								dBRat8famwOb
-								6VIDLnEwBQ==
+								QRPbUjpLeby3
+								y4t0Z8E6Yw==
 								</data>
 								<key>Size</key>
-								<integer>156783</integer>
+								<integer>156793</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -5908,7 +5908,7 @@
 					<key>page49 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-08-14T14:29:39Z</date>
+						<date>2018-08-27T18:51:05Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -6337,11 +6337,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								9bC3C8KSUulk
-								6qS6pDKpGg==
+								D+Q84XP8lc1Z
+								yIJ9qY6h4g==
 								</data>
 								<key>Size</key>
-								<integer>133487</integer>
+								<integer>133515</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -6782,7 +6782,7 @@
 					<key>page53 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-08-14T14:29:38Z</date>
+						<date>2018-08-27T18:51:05Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -7021,11 +7021,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								XSEGFLasf3ax
-								/QeJtfUTiQ==
+								br2o95WrPfHD
+								aERUrCwRog==
 								</data>
 								<key>Size</key>
-								<integer>83754</integer>
+								<integer>83786</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -8902,7 +8902,7 @@
 					<key>rw:document:extrafiles - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-08-27T15:55:30Z</date>
+						<date>2018-08-27T18:51:05Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -8951,11 +8951,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								mku/FTfnUjh1
-								hvslPRKXzA==
+								Mm/IkEWEChOu
+								08Xplu5T2Q==
 								</data>
 								<key>Size</key>
-								<integer>4441</integer>
+								<integer>4281</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -9004,7 +9004,7 @@
 					<key>rw:plugin:stacks - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-08-27T15:55:30Z</date>
+						<date>2018-08-27T18:51:05Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -10043,11 +10043,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								FpbmxE6QfsOZ
-								/Hu15tHsVA==
+								g0U7vFpNhv9+
+								FnAoyWykOA==
 								</data>
 								<key>Size</key>
-								<integer>3919</integer>
+								<integer>3364</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -10141,8 +10141,8 @@
 				LTk1RkItRDNEMjJDN0JDMUYxXxA0UERGIEZvciBQYXJ0
 				aWNpcGFudHMgU09TIFN5bXBvc2l1bSAyMDE4IHNjaGVk
 				dWxlLnBkZl8QJDdBNkY5RUNELUZDMjItNDg4NC1COTFF
-				LTU3QjlBNzZEQjMxM9I6Czs8V05TLnRpbWUjQcCaKzsd
-				xKCAC9I+P0BBWiRjbGFzc25hbWVYJGNsYXNzZXNWTlNE
+				LTU3QjlBNzZEQjMxM9I6Czs8V05TLnRpbWUjQcCaP87m
+				hamAC9I+P0BBWiRjbGFzc25hbWVYJGNsYXNzZXNWTlNE
 				YXRlokBCWE5TT2JqZWN00wkKC0RGSKFFgA2hR4AOgA9f
 				EC1zZnRwOi9jbXBseHN5cy53My51dm0uZWR1L3d3dy1y
 				b290L3RlbXBsYXRlcnkI0j4/TE1fEBNOU011dGFibGVE
@@ -10152,7 +10152,7 @@
 				FF8QJDJFOEM3RERDLUFFQjQtNDFGQi1CRkVELUU2QjhD
 				MEQ0N0M5M18QI1BGRCBmb3IgcGFydGljaXBhbnRzIEhX
 				QiBBZ2VuZGEucGRmXxAkNUY4MDY4RDUtMDQ4Mi00MTAy
-				LUE3N0EtMTg1NkVGMDlGQUVF0joLYTwjQcCaKzsdx5uA
+				LUE3N0EtMTg1NkVGMDlGQUVF0joLYTwjQcCaP87mgs+A
 				C9MJCgtkZkihZYAXoUeADoAPXxAtc2Z0cDovY21wbHhz
 				eXMudzMudXZtLmVkdS93d3ctcm9vdC90ZW1wbGF0ZXJ5
 				0j4/a2xcTlNNdXRhYmxlU2V0o2ttQlVOU1NldNMJCgtv
