--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/02-Symposium---Health-and-Wellness/ChildPages/1-Details/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/02-Symposium---Health-and-Wellness/ChildPages/1-Details/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-08-27T15:55:30Z</date>
+						<date>2018-08-27T18:51:05Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -512,11 +512,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								bNNqEaEIciyG
-								cid8c1zzGA==
+								34o0IiL73WVH
+								Wx0OKxQRPg==
 								</data>
 								<key>Size</key>
-								<integer>160928</integer>
+								<integer>160938</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
