--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/02-Symposium---Health-and-Wellness/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/02-Symposium---Health-and-Wellness/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-08-15T22:08:04Z</date>
+						<date>2018-08-27T18:51:05Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -424,11 +424,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								vgie9crVMiyC
-								ZcjzCAZxtw==
+								LxslhEgNt+eo
+								9JgwGNiF0A==
 								</data>
 								<key>Size</key>
-								<integer>127333</integer>
+								<integer>127357</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
