--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/03-Symposium---Science-of-stories/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/03-Symposium---Science-of-stories/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-08-15T22:08:04Z</date>
+						<date>2018-08-27T18:51:05Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -402,11 +402,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								O0SG5WzWdE+z
-								YgxvGTgWyw==
+								f4/LQKFI+f0n
+								Oc7DvFsP3Q==
 								</data>
 								<key>Size</key>
-								<integer>125815</integer>
+								<integer>125838</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
