--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/03-Symposium---Science-of-stories/ChildPages/1-Details/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/03-Symposium---Science-of-stories/ChildPages/1-Details/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-08-27T15:55:30Z</date>
+						<date>2018-08-27T18:51:05Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -512,11 +512,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								dBRat8famwOb
-								6VIDLnEwBQ==
+								QRPbUjpLeby3
+								y4t0Z8E6Yw==
 								</data>
 								<key>Size</key>
-								<integer>156783</integer>
+								<integer>156793</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
