--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/04-Complex-Networks-Winter-Workshop/ChildPages/1-Details/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/04-Complex-Networks-Winter-Workshop/ChildPages/1-Details/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-08-14T14:29:39Z</date>
+						<date>2018-08-27T18:51:05Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -462,11 +462,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								9bC3C8KSUulk
-								6qS6pDKpGg==
+								D+Q84XP8lc1Z
+								yIJ9qY6h4g==
 								</data>
 								<key>Size</key>
-								<integer>133487</integer>
+								<integer>133515</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
