--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/03-Symposium---Science-of-stories/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/03-Symposium---Science-of-stories/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-08-27T18:51:05Z</date>
+						<date>2018-08-28T12:44:12Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -338,6 +338,26 @@
 								<key>Size</key>
 								<integer>36650</integer>
 							</dict>
+							<key>files/stacks-image-e4ff3fb-250x72.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								dWyJFujqERXH
+								gRrMBT8sRg==
+								</data>
+								<key>Size</key>
+								<integer>11155</integer>
+							</dict>
+							<key>files/stacks-image-e4ff3fb-250x72@2x.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								l+/lfb9JFzMF
+								txTzw6S1zg==
+								</data>
+								<key>Size</key>
+								<integer>24969</integer>
+							</dict>
 							<key>files/stacks-image-f24159b-261x251.png</key>
 							<dict>
 								<key>Digest</key>
@@ -382,11 +402,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								TWkp3mMeDR23
-								5RERImH1xg==
+								E4WG34nr3rvi
+								DVAwuqAGCw==
 								</data>
 								<key>Size</key>
-								<integer>185564</integer>
+								<integer>186422</integer>
 							</dict>
 							<key>files/stacks_page_page35.js</key>
 							<dict>
@@ -402,11 +422,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								f4/LQKFI+f0n
-								Oc7DvFsP3Q==
+								yQRC4UWetrm9
+								rdzlqeQNxA==
 								</data>
 								<key>Size</key>
-								<integer>125838</integer>
+								<integer>126648</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
