--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -2840,7 +2840,7 @@
 					<key>page34 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-08-27T18:51:05Z</date>
+						<date>2018-08-28T12:44:12Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -3115,6 +3115,16 @@
 								<key>Size</key>
 								<integer>553274</integer>
 							</dict>
+							<key>files/stacks-image-a86e0b9-1200x354.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								CTkxOl9nw86Q
+								e4c/9FO+ZQ==
+								</data>
+								<key>Size</key>
+								<integer>89355</integer>
+							</dict>
 							<key>files/stacks-image-bcdb310-250x261.png</key>
 							<dict>
 								<key>Digest</key>
@@ -3209,11 +3219,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								nXcon2srW100
-								cOT8pHYgFA==
+								n/N55XvDCNV/
+								5mkpobn2tQ==
 								</data>
 								<key>Size</key>
-								<integer>191812</integer>
+								<integer>192100</integer>
 							</dict>
 							<key>files/stacks_page_page34.js</key>
 							<dict>
@@ -3229,11 +3239,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								LxslhEgNt+eo
-								9JgwGNiF0A==
+								29HDplB4rWB3
+								RKDd/eViKw==
 								</data>
 								<key>Size</key>
-								<integer>127357</integer>
+								<integer>127969</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -3246,7 +3256,7 @@
 					<key>page35 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-08-27T18:51:05Z</date>
+						<date>2018-08-28T12:44:12Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -3551,6 +3561,26 @@
 								<key>Size</key>
 								<integer>36650</integer>
 							</dict>
+							<key>files/stacks-image-e4ff3fb-250x72.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								dWyJFujqERXH
+								gRrMBT8sRg==
+								</data>
+								<key>Size</key>
+								<integer>11155</integer>
+							</dict>
+							<key>files/stacks-image-e4ff3fb-250x72@2x.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								l+/lfb9JFzMF
+								txTzw6S1zg==
+								</data>
+								<key>Size</key>
+								<integer>24969</integer>
+							</dict>
 							<key>files/stacks-image-f24159b-261x251.png</key>
 							<dict>
 								<key>Digest</key>
@@ -3595,11 +3625,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								TWkp3mMeDR23
-								5RERImH1xg==
+								E4WG34nr3rvi
+								DVAwuqAGCw==
 								</data>
 								<key>Size</key>
-								<integer>185564</integer>
+								<integer>186422</integer>
 							</dict>
 							<key>files/stacks_page_page35.js</key>
 							<dict>
@@ -3615,11 +3645,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								f4/LQKFI+f0n
-								Oc7DvFsP3Q==
+								yQRC4UWetrm9
+								rdzlqeQNxA==
 								</data>
 								<key>Size</key>
-								<integer>125838</integer>
+								<integer>126648</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -4660,7 +4690,7 @@
 					<key>page46 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-08-27T18:51:05Z</date>
+						<date>2018-08-28T12:44:12Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -5005,6 +5035,16 @@
 								<key>Size</key>
 								<integer>553274</integer>
 							</dict>
+							<key>files/stacks-image-a86e0b9-1200x354.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								CTkxOl9nw86Q
+								e4c/9FO+ZQ==
+								</data>
+								<key>Size</key>
+								<integer>89355</integer>
+							</dict>
 							<key>files/stacks-image-bcdb310-250x261.png</key>
 							<dict>
 								<key>Digest</key>
@@ -5109,11 +5149,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								8jRM4ftANRYP
-								GgUcAERRHA==
+								DAPBOJYY/7Ou
+								lfIdggV3rw==
 								</data>
 								<key>Size</key>
-								<integer>200698</integer>
+								<integer>200986</integer>
 							</dict>
 							<key>files/stacks_page_page46.js</key>
 							<dict>
@@ -5139,11 +5179,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								34o0IiL73WVH
-								Wx0OKxQRPg==
+								6XN5UO5rAret
+								T3x+m+pBDg==
 								</data>
 								<key>Size</key>
-								<integer>160938</integer>
+								<integer>161550</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -5412,7 +5452,7 @@
 					<key>page48 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-08-27T18:51:05Z</date>
+						<date>2018-08-28T12:44:12Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -5807,6 +5847,26 @@
 								<key>Size</key>
 								<integer>326541</integer>
 							</dict>
+							<key>files/stacks-image-e4ff3fb-250x72.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								dWyJFujqERXH
+								gRrMBT8sRg==
+								</data>
+								<key>Size</key>
+								<integer>11155</integer>
+							</dict>
+							<key>files/stacks-image-e4ff3fb-250x72@2x.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								l+/lfb9JFzMF
+								txTzw6S1zg==
+								</data>
+								<key>Size</key>
+								<integer>24969</integer>
+							</dict>
 							<key>files/stacks-image-f24159b-261x251.png</key>
 							<dict>
 								<key>Digest</key>
@@ -5861,11 +5921,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								CZhin4pmRdo8
-								4YcCgbn9Pg==
+								BIGufgBTlvht
+								sLWSZAct4g==
 								</data>
 								<key>Size</key>
-								<integer>198588</integer>
+								<integer>201794</integer>
 							</dict>
 							<key>files/stacks_page_page48.js</key>
 							<dict>
@@ -5891,11 +5951,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								QRPbUjpLeby3
-								y4t0Z8E6Yw==
+								W8ykWzMlZcnW
+								LUEkftXBUQ==
 								</data>
 								<key>Size</key>
-								<integer>156793</integer>
+								<integer>158759</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -8902,7 +8962,7 @@
 					<key>rw:document:extrafiles - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-08-27T18:51:05Z</date>
+						<date>2018-08-28T12:44:12Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -8951,11 +9011,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								Mm/IkEWEChOu
-								08Xplu5T2Q==
+								Gurc6P+J6ZVu
+								HztDyx8U1Q==
 								</data>
 								<key>Size</key>
-								<integer>4281</integer>
+								<integer>4409</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -9004,7 +9064,7 @@
 					<key>rw:plugin:stacks - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-08-27T18:51:05Z</date>
+						<date>2018-08-28T12:44:12Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -10043,11 +10103,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								g0U7vFpNhv9+
-								FnAoyWykOA==
+								FpbmxE6QfsOZ
+								/Hu15tHsVA==
 								</data>
 								<key>Size</key>
-								<integer>3364</integer>
+								<integer>3919</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -10137,31 +10197,31 @@
 				ZW1vdGVSZXNvdXJjZVxQdWJsaXNoZWRVUkxdUHVibGlz
 				aGVkRGF0ZV8QD0NoYW5nZWRTdGF0dXNlc1ROYW1lWklk
 				ZW50aWZpZXJZVGltZVN0YW1wWUZpbGVUb2tlbgiAEIAA
-				gACADIAIgAeACoAJXxAkQzVCNDUxNEYtNkVCOS00OUM1
-				LTk1RkItRDNEMjJDN0JDMUYxXxA0UERGIEZvciBQYXJ0
-				aWNpcGFudHMgU09TIFN5bXBvc2l1bSAyMDE4IHNjaGVk
-				dWxlLnBkZl8QJDdBNkY5RUNELUZDMjItNDg4NC1COTFF
-				LTU3QjlBNzZEQjMxM9I6Czs8V05TLnRpbWUjQcCaP87m
-				hamAC9I+P0BBWiRjbGFzc25hbWVYJGNsYXNzZXNWTlNE
-				YXRlokBCWE5TT2JqZWN00wkKC0RGSKFFgA2hR4AOgA9f
-				EC1zZnRwOi9jbXBseHN5cy53My51dm0uZWR1L3d3dy1y
-				b290L3RlbXBsYXRlcnkI0j4/TE1fEBNOU011dGFibGVE
-				aWN0aW9uYXJ5o0xOQlxOU0RpY3Rpb25hcnnSPj9QUV5S
-				V1NpdGVSZXNvdXJjZaJSQl5SV1NpdGVSZXNvdXJjZdkl
-				CyYnKCkqKywtLi8vWFlaW1wIgBCAAIAAgBaAE4ASgBWA
-				FF8QJDJFOEM3RERDLUFFQjQtNDFGQi1CRkVELUU2QjhD
-				MEQ0N0M5M18QI1BGRCBmb3IgcGFydGljaXBhbnRzIEhX
-				QiBBZ2VuZGEucGRmXxAkNUY4MDY4RDUtMDQ4Mi00MTAy
-				LUE3N0EtMTg1NkVGMDlGQUVF0joLYTwjQcCaP87mgs+A
+				gACADIAIgAeACoAJXxAkMkU4QzdEREMtQUVCNC00MUZC
+				LUJGRUQtRTZCOEMwRDQ3QzkzXxAjUEZEIGZvciBwYXJ0
+				aWNpcGFudHMgSFdCIEFnZW5kYS5wZGZfECQ1RjgwNjhE
+				NS0wNDgyLTQxMDItQTc3QS0xODU2RUYwOUZBRUXSOgs7
+				PFdOUy50aW1lI0HAmr2PZvbxgAvSPj9AQVokY2xhc3Nu
+				YW1lWCRjbGFzc2VzVk5TRGF0ZaJAQlhOU09iamVjdNMJ
+				CgtERkihRYANoUeADoAPXxAtc2Z0cDovY21wbHhzeXMu
+				dzMudXZtLmVkdS93d3ctcm9vdC90ZW1wbGF0ZXJ5CNI+
+				P0xNXxATTlNNdXRhYmxlRGljdGlvbmFyeaNMTkJcTlNE
+				aWN0aW9uYXJ50j4/UFFeUldTaXRlUmVzb3VyY2WiUkJe
+				UldTaXRlUmVzb3VyY2XZJQsmJygpKissLS4vL1hZWltc
+				CIAQgACAAIAWgBOAEoAVgBRfECRDNUI0NTE0Ri02RUI5
+				LTQ5QzUtOTVGQi1EM0QyMkM3QkMxRjFfEDRQREYgRm9y
+				IFBhcnRpY2lwYW50cyBTT1MgU3ltcG9zaXVtIDIwMTgg
+				c2NoZWR1bGUucGRmXxAkN0E2RjlFQ0QtRkMyMi00ODg0
+				LUI5MUUtNTdCOUE3NkRCMzEz0joLYTwjQcCavY9m+PmA
 				C9MJCgtkZkihZYAXoUeADoAPXxAtc2Z0cDovY21wbHhz
 				eXMudzMudXZtLmVkdS93d3ctcm9vdC90ZW1wbGF0ZXJ5
 				0j4/a2xcTlNNdXRhYmxlU2V0o2ttQlVOU1NldNMJCgtv
-				ckiiM1qAB4ASoiEigAaAEYAP0wkKC3d6SKIzWoAHgBKi
-				e3yAG4AggA/UC3+AgYKDESFYQ2hpbGRyZW5WUGFyZW50
-				XxASUmVwcmVzZW50ZWQgT2JqZWN0gCKAHIAegAbSCguH
+				ckiiWjOAEoAHoiIhgBGABoAP0wkKC3d6SKJaM4ASgAei
+				e3yAG4AggA/UC3+AgYKDESJYQ2hpbGRyZW5WUGFyZW50
+				XxASUmVwcmVzZW50ZWQgT2JqZWN0gCKAHIAegBHSCguH
 				iKCAHdI+P4qLXk5TTXV0YWJsZUFycmF5o4qMQldOU0Fy
 				cmF51At/gIGCjy8vgCKAH4AAgADSCguTiKJ7fIAbgCCA
-				HdQLf4CBgpkRIoAigCGAHoAR0goLnYiggB3SPj+goV8Q
+				HdQLf4CBgpkRIYAigCGAHoAG0goLnYiggB3SPj+goV8Q
 				EFJXU291cmNlTGlzdE5vZGWiokJfEBBSV1NvdXJjZUxp
 				c3ROb2Rl0wkKC6SlSKCggA/SPj+oqV8QElJXUmVzb3Vy
 				Y2VEYXRhYmFzZaKqQl8QElJXUmVzb3VyY2VEYXRhYmFz
@@ -10169,9 +10229,9 @@
 				b3SAAQAIABEAGgAjAC0AMgA3AGAAZgBtAHUAgACHAIoA
 				jACOAJEAkwCVAJcAoAClALAAvwDIANEA2wDdAN8A4QDj
 				AOUA6gDtAO8A8QDzAQYBFQEiATABQgFHAVIBXAFmAWcB
-				aQFrAW0BbwFxAXMBdQF3AZ4B1QH8AgECCQISAhQCGQIk
-				Ai0CNAI3AkACRwJJAksCTQJPAlECgQKCAocCnQKhAq4C
-				swLCAsUC1ALnAugC6gLsAu4C8ALyAvQC9gL4Ax8DRQNs
+				aQFrAW0BbwFxAXMBdQF3AZ4BxAHrAfAB+AIBAgMCCAIT
+				AhwCIwImAi8CNgI4AjoCPAI+AkACcAJxAnYCjAKQAp0C
+				ogKxArQCwwLWAtcC2QLbAt0C3wLhAuMC5QLnAw4DRQNs
 				A3EDegN8A4MDhQOHA4kDiwONA70DwgPPA9MD2QPgA+MD
 				5QPnA+oD7APuA/AD9wP6A/wD/gQBBAMEBQQHBBAEGQQg
 				BDUENwQ5BDsEPQRCBEMERQRKBFkEXQRlBG4EcARyBHQE
