--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/02-Symposium---Health-and-Wellness/ChildPages/1-Details/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/02-Symposium---Health-and-Wellness/ChildPages/1-Details/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-08-27T18:51:05Z</date>
+						<date>2018-08-28T12:44:12Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -378,6 +378,16 @@
 								<key>Size</key>
 								<integer>553274</integer>
 							</dict>
+							<key>files/stacks-image-a86e0b9-1200x354.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								CTkxOl9nw86Q
+								e4c/9FO+ZQ==
+								</data>
+								<key>Size</key>
+								<integer>89355</integer>
+							</dict>
 							<key>files/stacks-image-bcdb310-250x261.png</key>
 							<dict>
 								<key>Digest</key>
@@ -482,11 +492,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								8jRM4ftANRYP
-								GgUcAERRHA==
+								DAPBOJYY/7Ou
+								lfIdggV3rw==
 								</data>
 								<key>Size</key>
-								<integer>200698</integer>
+								<integer>200986</integer>
 							</dict>
 							<key>files/stacks_page_page46.js</key>
 							<dict>
@@ -512,11 +522,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								34o0IiL73WVH
-								Wx0OKxQRPg==
+								6XN5UO5rAret
+								T3x+m+pBDg==
 								</data>
 								<key>Size</key>
-								<integer>160938</integer>
+								<integer>161550</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
