--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/02-Symposium---Health-and-Wellness/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/02-Symposium---Health-and-Wellness/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-08-27T18:51:05Z</date>
+						<date>2018-08-28T12:44:12Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -310,6 +310,16 @@
 								<key>Size</key>
 								<integer>553274</integer>
 							</dict>
+							<key>files/stacks-image-a86e0b9-1200x354.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								CTkxOl9nw86Q
+								e4c/9FO+ZQ==
+								</data>
+								<key>Size</key>
+								<integer>89355</integer>
+							</dict>
 							<key>files/stacks-image-bcdb310-250x261.png</key>
 							<dict>
 								<key>Digest</key>
@@ -404,11 +414,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								nXcon2srW100
-								cOT8pHYgFA==
+								n/N55XvDCNV/
+								5mkpobn2tQ==
 								</data>
 								<key>Size</key>
-								<integer>191812</integer>
+								<integer>192100</integer>
 							</dict>
 							<key>files/stacks_page_page34.js</key>
 							<dict>
@@ -424,11 +434,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								LxslhEgNt+eo
-								9JgwGNiF0A==
+								29HDplB4rWB3
+								RKDd/eViKw==
 								</data>
 								<key>Size</key>
-								<integer>127357</integer>
+								<integer>127969</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
