updated affiliation HWB
updated affiliation HWB

--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/02-Symposium---Health-and-Wellness/ChildPages/1-Details/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/02-Symposium---Health-and-Wellness/ChildPages/1-Details/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-08-28T14:18:31Z</date>
+						<date>2018-08-28T15:46:30Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -522,11 +522,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								jYq7L+3rB3qH
-								a8H3rU85Dg==
+								oXc6Kke+nxID
+								CZbMjFmOfg==
 								</data>
 								<key>Size</key>
-								<integer>161656</integer>
+								<integer>161638</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
