updates to JE bio
updates to JE bio

--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/02-Symposium---Health-and-Wellness/ChildPages/1-Details/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/02-Symposium---Health-and-Wellness/ChildPages/1-Details/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-08-28T15:46:30Z</date>
+						<date>2018-08-29T13:52:13Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -492,21 +492,21 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								DAPBOJYY/7Ou
-								lfIdggV3rw==
+								NPkeKuLcUVOX
+								JSgxvrk/wg==
 								</data>
 								<key>Size</key>
-								<integer>200986</integer>
+								<integer>201203</integer>
 							</dict>
 							<key>files/stacks_page_page46.js</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								+mxVSBc7A95r
-								9O2+3x6rcQ==
+								OkQy9b9zr87l
+								gughS78RPQ==
 								</data>
 								<key>Size</key>
-								<integer>30339</integer>
+								<integer>30521</integer>
 							</dict>
 							<key>files/stacks_page_page46.php</key>
 							<dict>
@@ -522,11 +522,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								oXc6Kke+nxID
-								CZbMjFmOfg==
+								8OZU8NrvsM17
+								wzXlhu9NdQ==
 								</data>
 								<key>Size</key>
-								<integer>161638</integer>
+								<integer>163307</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
