--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/03-Symposium---Science-of-stories/ChildPages/1-Details/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/03-Symposium---Science-of-stories/ChildPages/1-Details/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-08-28T14:18:31Z</date>
+						<date>2018-08-29T13:52:13Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -502,8 +502,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								BIGufgBTlvht
-								sLWSZAct4g==
+								mWYL7yLDWaxm
+								SPxGAHc1kg==
 								</data>
 								<key>Size</key>
 								<integer>201794</integer>
