--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -2840,7 +2840,7 @@
 					<key>page34 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-08-28T15:46:30Z</date>
+						<date>2018-08-29T13:52:13Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -3239,11 +3239,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								Zq3Lxe5LQEX5
-								k/lWAtKQDQ==
+								IuPzJ93lZelc
+								97xyw1AslQ==
 								</data>
 								<key>Size</key>
-								<integer>128060</integer>
+								<integer>128079</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -4690,7 +4690,7 @@
 					<key>page46 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-08-28T15:46:30Z</date>
+						<date>2018-08-29T13:52:13Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -5149,21 +5149,21 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								DAPBOJYY/7Ou
-								lfIdggV3rw==
+								NPkeKuLcUVOX
+								JSgxvrk/wg==
 								</data>
 								<key>Size</key>
-								<integer>200986</integer>
+								<integer>201203</integer>
 							</dict>
 							<key>files/stacks_page_page46.js</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								+mxVSBc7A95r
-								9O2+3x6rcQ==
+								OkQy9b9zr87l
+								gughS78RPQ==
 								</data>
 								<key>Size</key>
-								<integer>30339</integer>
+								<integer>30521</integer>
 							</dict>
 							<key>files/stacks_page_page46.php</key>
 							<dict>
@@ -5179,11 +5179,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								oXc6Kke+nxID
-								CZbMjFmOfg==
+								8OZU8NrvsM17
+								wzXlhu9NdQ==
 								</data>
 								<key>Size</key>
-								<integer>161638</integer>
+								<integer>163307</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -5452,7 +5452,7 @@
 					<key>page48 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-08-28T14:18:31Z</date>
+						<date>2018-08-29T13:52:13Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -5921,8 +5921,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								BIGufgBTlvht
-								sLWSZAct4g==
+								mWYL7yLDWaxm
+								SPxGAHc1kg==
 								</data>
 								<key>Size</key>
 								<integer>201794</integer>
@@ -10211,8 +10211,8 @@
 				LTk1RkItRDNEMjJDN0JDMUYxXxA0UERGIEZvciBQYXJ0
 				aWNpcGFudHMgU09TIFN5bXBvc2l1bSAyMDE4IHNjaGVk
 				dWxlLnBkZl8QJDdBNkY5RUNELUZDMjItNDg4NC1COTFF
-				LTU3QjlBNzZEQjMxM9I6Czs8V05TLnRpbWUjQcCa0uv0
-				H7CAC9I+P0BBWiRjbGFzc25hbWVYJGNsYXNzZXNWTlNE
+				LTU3QjlBNzZEQjMxM9I6Czs8V05TLnRpbWUjQcCbbkkm
+				FW6AC9I+P0BBWiRjbGFzc25hbWVYJGNsYXNzZXNWTlNE
 				YXRlokBCWE5TT2JqZWN00wkKC0RGSKFFgA2hR4AOgA9f
 				EC1zZnRwOi9jbXBseHN5cy53My51dm0uZWR1L3d3dy1y
 				b290L3RlbXBsYXRlcnkI0j4/TE1fEBNOU011dGFibGVE
@@ -10222,7 +10222,7 @@
 				FF8QJDJFOEM3RERDLUFFQjQtNDFGQi1CRkVELUU2QjhD
 				MEQ0N0M5M18QI1BGRCBmb3IgcGFydGljaXBhbnRzIEhX
 				QiBBZ2VuZGEucGRmXxAkNUY4MDY4RDUtMDQ4Mi00MTAy
-				LUE3N0EtMTg1NkVGMDlGQUVF0joLYTwjQcCa0uv0IjaA
+				LUE3N0EtMTg1NkVGMDlGQUVF0joLYTwjQcCbbkkmGQmA
 				C9MJCgtkZkihZYAXoUeADoAPXxAtc2Z0cDovY21wbHhz
 				eXMudzMudXZtLmVkdS93d3ctcm9vdC90ZW1wbGF0ZXJ5
 				0j4/a2xcTlNNdXRhYmxlU2V0o2ttQlVOU1NldNMJCgtv
