--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/02-Symposium---Health-and-Wellness/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/02-Symposium---Health-and-Wellness/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-08-28T15:46:30Z</date>
+						<date>2018-08-29T13:52:13Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -434,11 +434,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								Zq3Lxe5LQEX5
-								k/lWAtKQDQ==
+								IuPzJ93lZelc
+								97xyw1AslQ==
 								</data>
 								<key>Size</key>
-								<integer>128060</integer>
+								<integer>128079</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
