--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/02-Symposium---Health-and-Wellness/ChildPages/1-Details/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/02-Symposium---Health-and-Wellness/ChildPages/1-Details/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-08-29T13:52:13Z</date>
+						<date>2018-08-30T16:44:19Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -522,11 +522,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								8OZU8NrvsM17
-								wzXlhu9NdQ==
+								Edh1R9PhfZP2
+								7MDV0XtRow==
 								</data>
 								<key>Size</key>
-								<integer>163307</integer>
+								<integer>163782</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
