--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/02-Symposium---Health-and-Wellness/ChildPages/1-Details/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/02-Symposium---Health-and-Wellness/ChildPages/1-Details/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-08-30T16:44:19Z</date>
+						<date>2018-08-30T18:39:39Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -492,11 +492,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								NPkeKuLcUVOX
-								JSgxvrk/wg==
+								/hipQUugyRCN
+								fiNwaWCShA==
 								</data>
 								<key>Size</key>
-								<integer>201203</integer>
+								<integer>200885</integer>
 							</dict>
 							<key>files/stacks_page_page46.js</key>
 							<dict>
@@ -522,11 +522,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								Edh1R9PhfZP2
-								7MDV0XtRow==
+								GBvQJHzXH48A
+								/lJCAe+6ZA==
 								</data>
 								<key>Size</key>
-								<integer>163782</integer>
+								<integer>163306</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
