--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -4690,7 +4690,7 @@
 					<key>page46 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-08-30T16:44:19Z</date>
+						<date>2018-08-30T18:39:39Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -5149,11 +5149,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								NPkeKuLcUVOX
-								JSgxvrk/wg==
+								/hipQUugyRCN
+								fiNwaWCShA==
 								</data>
 								<key>Size</key>
-								<integer>201203</integer>
+								<integer>200885</integer>
 							</dict>
 							<key>files/stacks_page_page46.js</key>
 							<dict>
@@ -5179,11 +5179,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								Edh1R9PhfZP2
-								7MDV0XtRow==
+								GBvQJHzXH48A
+								/lJCAe+6ZA==
 								</data>
 								<key>Size</key>
-								<integer>163782</integer>
+								<integer>163306</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -10211,8 +10211,8 @@
 				LTk1RkItRDNEMjJDN0JDMUYxXxA0UERGIEZvciBQYXJ0
 				aWNpcGFudHMgU09TIFN5bXBvc2l1bSAyMDE4IHNjaGVk
 				dWxlLnBkZl8QJDdBNkY5RUNELUZDMjItNDg4NC1COTFF
-				LTU3QjlBNzZEQjMxM9I6Czs8V05TLnRpbWUjQcCcKzKj
-				veiAC9I+P0BBWiRjbGFzc25hbWVYJGNsYXNzZXNWTlNE
+				LTU3QjlBNzZEQjMxM9I6Czs8V05TLnRpbWUjQcCcOLat
+				2BeAC9I+P0BBWiRjbGFzc25hbWVYJGNsYXNzZXNWTlNE
 				YXRlokBCWE5TT2JqZWN00wkKC0RGSKFFgA2hR4AOgA9f
 				EC1zZnRwOi9jbXBseHN5cy53My51dm0uZWR1L3d3dy1y
 				b290L3RlbXBsYXRlcnkI0j4/TE1fEBNOU011dGFibGVE
@@ -10222,7 +10222,7 @@
 				FF8QJDJFOEM3RERDLUFFQjQtNDFGQi1CRkVELUU2QjhD
 				MEQ0N0M5M18QI1BGRCBmb3IgcGFydGljaXBhbnRzIEhX
 				QiBBZ2VuZGEucGRmXxAkNUY4MDY4RDUtMDQ4Mi00MTAy
-				LUE3N0EtMTg1NkVGMDlGQUVF0joLYTwjQcCcKzKjwKmA
+				LUE3N0EtMTg1NkVGMDlGQUVF0joLYTwjQcCcOLat2nOA
 				C9MJCgtkZkihZYAXoUeADoAPXxAtc2Z0cDovY21wbHhz
 				eXMudzMudXZtLmVkdS93d3ctcm9vdC90ZW1wbGF0ZXJ5
 				0j4/a2xcTlNNdXRhYmxlU2V0o2ttQlVOU1NldNMJCgtv
