changes sponsor to support per CME
changes sponsor to support per CME

--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -2840,7 +2840,7 @@
 					<key>page34 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-08-29T13:52:13Z</date>
+						<date>2018-09-04T12:39:10Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -3239,11 +3239,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								IuPzJ93lZelc
-								97xyw1AslQ==
+								MuRrKsG5jZK3
+								DEW+TusgeA==
 								</data>
 								<key>Size</key>
-								<integer>128079</integer>
+								<integer>128078</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -4690,7 +4690,7 @@
 					<key>page46 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-09-03T17:58:52Z</date>
+						<date>2018-09-04T12:39:10Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -5179,11 +5179,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								NoK8sH30/oDH
-								ks/h6nyP/Q==
+								z2dEQIaCWSrJ
+								2JjJXnCF1g==
 								</data>
 								<key>Size</key>
-								<integer>165016</integer>
+								<integer>165015</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -10211,8 +10211,8 @@
 				LTk1RkItRDNEMjJDN0JDMUYxXxA0UERGIEZvciBQYXJ0
 				aWNpcGFudHMgU09TIFN5bXBvc2l1bSAyMDE4IHNjaGVk
 				dWxlLnBkZl8QJDdBNkY5RUNELUZDMjItNDg4NC1COTFF
-				LTU3QjlBNzZEQjMxM9I6Czs8V05TLnRpbWUjQcCe1vBx
-				sFeAC9I+P0BBWiRjbGFzc25hbWVYJGNsYXNzZXNWTlNE
+				LTU3QjlBNzZEQjMxM9I6Czs8V05TLnRpbWUjQcCfWjhm
+				dZuAC9I+P0BBWiRjbGFzc25hbWVYJGNsYXNzZXNWTlNE
 				YXRlokBCWE5TT2JqZWN00wkKC0RGSKFFgA2hR4AOgA9f
 				EC1zZnRwOi9jbXBseHN5cy53My51dm0uZWR1L3d3dy1y
 				b290L3RlbXBsYXRlcnkI0j4/TE1fEBNOU011dGFibGVE
@@ -10222,7 +10222,7 @@
 				FF8QJDJFOEM3RERDLUFFQjQtNDFGQi1CRkVELUU2QjhD
 				MEQ0N0M5M18QI1BGRCBmb3IgcGFydGljaXBhbnRzIEhX
 				QiBBZ2VuZGEucGRmXxAkNUY4MDY4RDUtMDQ4Mi00MTAy
-				LUE3N0EtMTg1NkVGMDlGQUVF0joLYTwjQcCe1vBxrUuA
+				LUE3N0EtMTg1NkVGMDlGQUVF0joLYTwjQcCfWjhmchGA
 				C9MJCgtkZkihZYAXoUeADoAPXxAtc2Z0cDovY21wbHhz
 				eXMudzMudXZtLmVkdS93d3ctcm9vdC90ZW1wbGF0ZXJ5
 				0j4/a2xcTlNNdXRhYmxlU2V0o2ttQlVOU1NldNMJCgtv
