--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/02-Symposium---Health-and-Wellness/ChildPages/1-Details/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/02-Symposium---Health-and-Wellness/ChildPages/1-Details/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-09-03T17:58:52Z</date>
+						<date>2018-09-04T12:39:10Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -522,11 +522,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								NoK8sH30/oDH
-								ks/h6nyP/Q==
+								z2dEQIaCWSrJ
+								2JjJXnCF1g==
 								</data>
 								<key>Size</key>
-								<integer>165016</integer>
+								<integer>165015</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
