--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/02-Symposium---Health-and-Wellness/ChildPages/1-Details/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/02-Symposium---Health-and-Wellness/ChildPages/1-Details/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-09-04T12:39:10Z</date>
+						<date>2018-09-04T14:02:58Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -522,11 +522,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								z2dEQIaCWSrJ
-								2JjJXnCF1g==
+								O0cl/JiUHfMh
+								GsyTkljp4A==
 								</data>
 								<key>Size</key>
-								<integer>165015</integer>
+								<integer>165081</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
