--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/02-Symposium---Health-and-Wellness/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/02-Symposium---Health-and-Wellness/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-09-04T12:39:10Z</date>
+						<date>2018-09-04T14:35:11Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -434,11 +434,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								MuRrKsG5jZK3
-								DEW+TusgeA==
+								oTuSZukj6Uwi
+								Sr8rcMB/Zg==
 								</data>
 								<key>Size</key>
-								<integer>128078</integer>
+								<integer>128263</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
