--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/04-Complex-Networks-Winter-Workshop/ChildPages/1-Details/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/04-Complex-Networks-Winter-Workshop/ChildPages/1-Details/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-08-28T14:18:32Z</date>
+						<date>2018-09-04T15:16:22Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -462,8 +462,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								9ycONtt2k/kS
-								dSPe0xrGHg==
+								v+mFznIDusZK
+								DMHRDvYzOg==
 								</data>
 								<key>Size</key>
 								<integer>133621</integer>
